Fixed bug with horizontal scrollbar, like/dislike buttons in ForumPost.js and reorganised folders

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -18,9 +18,8 @@
 
 .App {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: var(--color-tertiary);
-  overflow-x: hidden;
 }
 
 main {
